--- a/firebaseJson.json
+++ b/firebaseJson.json
@@ -41,10 +41,85 @@
       "2025-04-01T12:30:00": 23,
       "2025-04-02T12:30:00": 24
     },
-    "luchtvochtigheidextData": {},
-    "luchtvochtigheidintData": {},
-    "luchtdrukData": {},
-    "gewichtData": {},
-    "batterijData": {}
+    "luchtvochtigheidextData": {
+      "2025-03-20T12:30:00": 85,
+      "2025-03-21T12:30:00": 80,
+      "2025-03-22T12:30:00": 78,
+      "2025-03-23T12:30:00": 75,
+      "2025-03-24T12:30:00": 70,
+      "2025-03-25T12:30:00": 65,
+      "2025-03-26T12:30:00": 60,
+      "2025-03-27T12:30:00": 58,
+      "2025-03-28T12:30:00": 62,
+      "2025-03-29T12:30:00": 68,
+      "2025-03-30T12:30:00": 72,
+      "2025-03-31T12:30:00": 75,
+      "2025-04-01T12:30:00": 80,
+      "2025-04-02T12:30:00": 85
+    },
+    "luchtvochtigheidintData": {
+      "2025-03-20T12:30:00": 55,
+      "2025-03-21T12:30:00": 53,
+      "2025-03-22T12:30:00": 50,
+      "2025-03-23T12:30:00": 48,
+      "2025-03-24T12:30:00": 47,
+      "2025-03-25T12:30:00": 45,
+      "2025-03-26T12:30:00": 42,
+      "2025-03-27T12:30:00": 40,
+      "2025-03-28T12:30:00": 41,
+      "2025-03-29T12:30:00": 43,
+      "2025-03-30T12:30:00": 46,
+      "2025-03-31T12:30:00": 48,
+      "2025-04-01T12:30:00": 52,
+      "2025-04-02T12:30:00": 55
+    },
+    "luchtdrukData": {
+      "2025-03-20T12:30:00": 1015,
+      "2025-03-21T12:30:00": 1013,
+      "2025-03-22T12:30:00": 1017,
+      "2025-03-23T12:30:00": 1019,
+      "2025-03-24T12:30:00": 1020,
+      "2025-03-25T12:30:00": 1018,
+      "2025-03-26T12:30:00": 1016,
+      "2025-03-27T12:30:00": 1014,
+      "2025-03-28T12:30:00": 1012,
+      "2025-03-29T12:30:00": 1008,
+      "2025-03-30T12:30:00": 1005,
+      "2025-03-31T12:30:00": 1009,
+      "2025-04-01T12:30:00": 1012,
+      "2025-04-02T12:30:00": 1014
+    },
+    "gewichtData": {
+      "2025-03-20T12:30:00": 32.5,
+      "2025-03-21T12:30:00": 33.0,
+      "2025-03-22T12:30:00": 34.2,
+      "2025-03-23T12:30:00": 35.5,
+      "2025-03-24T12:30:00": 36.1,
+      "2025-03-25T12:30:00": 37.0,
+      "2025-03-26T12:30:00": 37.8,
+      "2025-03-27T12:30:00": 38.5,
+      "2025-03-28T12:30:00": 39.0,
+      "2025-03-29T12:30:00": 39.7,
+      "2025-03-30T12:30:00": 40.2,
+      "2025-03-31T12:30:00": 41.0,
+      "2025-04-01T12:30:00": 41.5,
+      "2025-04-02T12:30:00": 42.3
+    },
+    "batterijData": {
+      "2025-03-20T12:30:00": 95,
+      "2025-03-21T12:30:00": 97,
+      "2025-03-22T12:30:00": 100,
+      "2025-03-23T12:30:00": 100,
+      "2025-03-24T12:30:00": 100,
+      "2025-03-25T12:30:00": 90,
+      "2025-03-26T12:30:00": 85,
+      "2025-03-27T12:30:00": 95,
+      "2025-03-28T12:30:00": 98,
+      "2025-03-29T12:30:00": 100,
+      "2025-03-30T12:30:00": 80,
+      "2025-03-31T12:30:00": 75,
+      "2025-04-01T12:30:00": 88,
+      "2025-04-02T12:30:00": 100
+    }
   }
 }
